# OpenHarness

./: .gitignore  CLAUDE.md  USAGE.md
homebroadband-agent/: pyproject.toml
homebroadband-agent/agents/: config-translator.md  coordinator.md  plan-worker.md
homebroadband-agent/hooks/: hooks.json
homebroadband-agent/memory/: MEMORY.md
homebroadband-agent/plugins/homebroadband-plugin/: plugin.json
homebroadband-agent/schemas/: config_dynamic_optimization.json  config_perception.json  config_remote_closure.json  solution_plan.json
homebroadband-agent/scripts/: setup.py  validate_constraints.py
homebroadband-agent/skills/: goal-parsing.md  tpl-cei-perception.md  tpl-dynamic-optimization.md  tpl-fault-diagnosis.md  tpl-manual-fallback.md  tpl-remote-closure.md  user-profile.md
homebroadband-agent/skills/constraint-review/: SKILL.md
homebroadband-agent/skills/goal-parsing/assets/: goal-spec-template.json
homebroadband-agent/skills/tpl-cei-perception/: SKILL.md
homebroadband-agent/skills/tpl-cei-perception/assets/: cei-skeleton.json
homebroadband-agent/skills/tpl-dynamic-optimization/: SKILL.md
homebroadband-agent/skills/tpl-manual-fallback/: SKILL.md
homebroadband-agent/skills/user-profile/: SKILL.md
homebroadband-agent/tests/: conftest.py  test_config_translate.py  test_constraint_check.py  test_goal_parsing.py  test_plan_generation.py  test_skill_adk_structure.py
homebroadband-agent/tools/: __init__.py  config_translate_tool.py  constraint_check_tool.py  device_query_tool.py  kpi_query_tool.py
tests/: test_hooks_skills_plugins_real.py  (+2 more)
(+45 files in other folders)
