[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "homebroadband-agent"
version = "0.1.0"
description = "家宽体验感知优化 Agent 智能体原型 - 基于 OpenHarness 框架"
license = "MIT"
requires-python = ">=3.10"

dependencies = [
    "openharness>=0.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
